fix(ui): header flickering issue [EV-28674] (#15697)

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -2602,3 +2602,7 @@ div[class*='_pendo'] button {
 .playlist-content-box {
   z-index: 1004;
 }
+
+.ant-scrolling-effect .subscription-header  {
+  padding-right: 40px;
+}
